--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,12 @@ subtitle: ''
 description: Ching367436's Blog，目前主要的內容以資安為主。
 keywords: 
   - Ching367436
-  - 王博靚
   - 臺中一中電腦資訊研習社 38th 副社長
-  - 陽明交大應用數學系
+  - Bamboofox 社長
   - 書卷獎
   - 資安
   - AIS3 最佳專題
-author: 王博靚
+author: Ching367436
 language: en
 timezone: 'ROC'
 
