--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "server": "hexo clean; hexo server"
   },
   "hexo": {
-    "version": "6.3.0"
+    "version": "7.1.1"
   },
   "dependencies": {
-    "hexo": "^6.3.0",
     "hexo-all-minifier": "^0.5.7",
     "hexo-deployer-git": "^4.0.0",
     "hexo-filter-mathjax": "^0.9.0",
@@ -28,5 +27,8 @@
     "hexo-server": "^3.0.0",
     "hexo-wordcount": "^6.0.1",
     "nodejieba": "^2.6.0"
+  },
+  "devDependencies": {
+    "hexo": "^7.1.1"
   }
 }
